pod-info/1-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: podinfo

spec:
  selector:
    matchLabels:
      app: podinfo

  template:
    metadata:
      labels:
        app: podinfo

    spec:
      containers:
      - name: podinfo
        image: stefanprodan/podinfo
        ports:
          - containerPort: 9898
---
apiVersion: v1
kind: Service
metadata:
  name: podinfo
spec:
  ports:
    - port: 80
      targetPort: 9898
      nodePort: 30001
  selector:
    app: podinfo
  type: NodePort
